fixed footer on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -227,3 +227,7 @@ h6 {
 .socials:hover {
   color: $secondary;
 }
+
+.footer-link{
+  font-size: 0.8rem;
+}
